# cpp-modern-2025-02-06

./: CMakeLists.txt  README.md
_exercises/ex-algorithms-with-lambdas/: basic_algorithms.cpp
_exercises/ex-unique-ptr/: fwd_list.hpp  tests_fwd_list.cpp
_exercises/ex_auto_declarations/: CMakeLists.txt  auto_declarations_ex.cpp
_exercises/ex_find_null/: CMakeLists.txt  CMakeLists.txt.alt  find_null.cpp
any/: tests_any.cpp
class-features/: tests_class_features.cpp
constexpr/: constexpr.cpp
core-features/: tests_enumerations.cpp  tests_nullptr.cpp  tests_range_based_for.cpp  tests_type_deduction.cpp  tests_uniform_init_syntax.cpp
lambdas/: lambdas.cpp
move-semantics/: gadget.hpp  move_container_int.cpp  move_semantics_1.cpp  move_semantics_2.cpp  perfect_forwarding.cpp
optional/: tests_optional.cpp
smart-pointers/: smart_pointers.cpp
string-view/: tests_string_view.cpp
templates/: tests_ctad.cpp  tests_fold_expressions.cpp  tests_templates.cpp  tests_variadic_templates.cpp
tuples-structured-bindings/: tests_structured_bindings.cpp  tests_tuples.cpp
variant/: tests_variants.cpp
